Time to go live!!

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>Ring Finder</title>
+    <title>T&B Reveal Party!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
